--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "run-sql": "ts-node ./src/runPSQL.ts",
+    "start": "node ./build/index.js",
+    "build": "rimraf ./build && tsc"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +23,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.14.13",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
